--- a/exo7.css
+++ b/exo7.css
@@ -5,7 +5,7 @@ body{
     padding: 0;
 }
 
-#tablecentre
+#tableborder
 {
 margin:manual;
 border-spacing: 0px 0px;
@@ -13,7 +13,7 @@ border-spacing: 0px 0px;
 .grid > div {
 
    
-    border: solid 1px #999 ;
+    border: solid 0px #999 ;
 }
 
 .grid{
